# security-cam-client

./: .gitignore  Cargo.toml  README.md
src/: ffmpeg.rs  lib.rs  main.rs  motiondetection.rs  networking.rs
