[package]
name = "security-cam-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22", features = ["cookies","stream"]}
imageproc = "0.23.0"
security-cam-common = {version = "0.1.3"}
v4l = "0.14.0"
[dependencies.image]
version = "0.24.1"
default-features = true
