[package]
name = "security-cam-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["cookies", "stream"] }
imageproc = "0.25.0"
security-cam-common = { path = "../security-cam-common" }
v4l = "0.14.0"
reqwest-websocket = "=0.4.4"
awc = { version = "3.5.1", features = ["cookies"] }
actix-web = "4.3.1"

[dependencies.image]
version = "0.25.5"
default-features = true
